# Etaler

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  VS Build notes.txt
.devcontainer/: Dockerfile  devcontainer.json  settings.vscode.json
Etaler/: CMakeLists.txt  Etaler.hpp  XtensorInterop.hpp  pch.hpp
Etaler/Algorithms/: Anomaly.hpp  Boost.hpp  SDRClassifer.hpp  SpatialPooler.cpp  SpatialPooler.hpp  SpatialPoolerND.cpp  SpatialPoolerND.hpp  Synapse.cpp  Synapse.hpp  TemporalMemory.cpp  TemporalMemory.hpp
Etaler/Backends/: Boost.hpp  CPUBackend.cpp  CPUBackend.hpp  OpenCLBackend.cpp  OpenCLBackend.hpp
Etaler/Core/: Backend.hpp  DType.hpp  DefaultBackend.cpp  DefaultBackend.hpp  Error.cpp  Error.hpp  Half.hpp  Random.hpp  Serialize.cpp  Serialize.hpp  Shape.hpp  SmallVector.hpp  String.hpp  Tensor.cpp  Tensor.hpp  TensorImpl.hpp  TypeHelpers.cpp  TypeHelpers.hpp  TypeList.hpp  Views.hpp
Etaler/Encoders/: Category.hpp  GridCell1d.hpp  GridCell2d.hpp  Scalar.hpp
Etaler/Interop/: Arrayfire.hpp  Xtensor.hpp
Etaler/Utils/: ProgressDisplay.hpp
cmake/: EnableSIMD.cmake  FindCxaDemangle.cmake  FindEtaler.cmake  FindSphinx.cmake  FindTBB.cmake  UseGOLD.cmake
docker/: Dockerfile  README  build.sh  run.sh
docs/: Backends.md  BuildOnMSVC.md  BuildOnOSX.md  CMakeLists.txt  Contribution.md  DeveloperNotes.md  GUI.md  Introduction.md  OpenCLBackend.md  PythonBindings.md  Tensor.md  UsingWithClingROOT.md  howtos.md  requirements.txt  tensor_future.md
docs/source/: BackendDesign.md  BuildOnLinux.md  BuildOnOSX.md  Contribution.md  DeveloperNotes.md  GUI.md  HTMAlgorithm.md  Introduction.md  OpenCLBackend.md  PythonBindings.md  Tensor.md  UsingWithClingROOT.md  conf.py  index.rst
examples/: CMakeLists.txt  backend2backend.cpp  example1.cpp  mnist.cpp  spbench.cpp  tmbench.cpp  tmexample.cpp
examples/mnist/: mnist_reader.hpp  mnist_reader_common.hpp  mnist_reader_less.hpp
examples/visualize/: CMakeLists.txt  tm_visualize.cpp
kernels/: applyBurst.cl  cast.cl  cellActivity.cl  cellActivity_compressed_local.cl  cellActivity_global.cl  copy.cl  decaySynapses.cl  globalInhibition.cl  growSynapses.cl  learnCorrilation.cl  learnCorrilation_compressed_local.cl  learnCorrilation_global.cl  overlapScore.cl  overlapScore_compressed_local.cl  overlapScore_global.cl  reverseBurst.cl  sort.cl  sum.cl  sum_local.cl  toSparse.cl
tests/: CMakeLists.txt  common_tests.cpp  main.cpp  main_opencl.cpp  test.cpp
